<resources>
    <string name="app_name">Simple sms remote</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_log">History</string>
    <string name="title_activity_help_how_to_control">How to control</string>
    <string name="title_activity_configure_control_action">Configure control module</string>

    <string name="action_settings">Settings</string>
    <string name="action_log">Log</string>
    <string name="action_help_tour">Help tour</string>
    <string name="action_help_how_to_control">How to control</string>

    <string name="simple_yes">yes</string>
    <string name="simple_no">no</string>
    <string name="simple_empty">empty</string>
    <string name="simple_request_again">request again</string>
    <string name="simple_abort">abort</string>
    <string name="simple_rename">rename</string>
    <string name="simple_delete">delete</string>
    <string name="simple_create">create</string>
    <string name="simple_choose">choose</string>
    <string name="simple_cancel">Cancel</string>

    <string name="module_info_title">Module info</string>
    <string name="control_modules_title">Modules</string>
    <string name="module_command_parameter_info_title">Parameter info</string>
    <string name="user_data_title">User data</string>
    <string name="alert_load_data_failed">The app failed to load user data.</string>
    <string name="alert_load_log_failed">The app failed to load log from file.</string>
    <string name="alert_save_data_failed">The app failed to save your data.</string>
    <string name="alert_sure_to_disable_module">Do you really want to disable this module?</string>
    <string name="alert_sure_to_clear_log">Clear whole log?</string>
    <string name="alert_load_cameras_failed">The app failed to load available cameras.</string>
    <string name="alert_no_cameras_found">No camera has been found on your device.</string>
    <string name="receiver_service_title">Sms Receiver</string>
    <string name="commands_title">Commands</string>
    <string name="granted_phones_title">Granted phones</string>
    <string name="enable_module">enable module</string>
    <string name="disable_module">disable module</string>
    <string name="compatible">compatible</string>
    <string name="incompatible">not compatible</string>
    <string name="permissions_denied">You need to grant the required permissions in order to enable this control module.</string>
    <string name="control_module_enabled_successful">The control module has been successfully enabled.</string>
    <string name="control_module_disabled_successful">The control module has been successfully disabled.</string>
    <string name="title_module_section_settings">Settings</string>
    <string name="unknown_accuracy">unknown</string>

    <string name="receiver_started">service for receiving sms commands started</string>
    <string name="receiver_stopped">receiver service stopped</string>
    <string name="receiver_life_info_running">running for %1$s</string>
    <string name="receiver_life_info_not_running">not running</string>

    <string name="permission_receive_sms_not_granted">The app cannot process remote commands without having the permission to receive sms.</string>

    <string name="hint_phone_edit">phone number</string>

    <string name="hint_choose_camera">choose camera</string>
    <string name="is_default_camera_device">default camera</string>

    <string name="camera_facing_back_title">back camera</string>
    <string name="camera_facing_front_title">front camera</string>
    <string name="camera_facing_external_title">external camera</string>
    <string name="camera_facing_unknown_title">unknown lens position</string>
    <string name="module_settings_camera_default_title">Default capture settings</string>
    <string name="flashlight_switch_title">Flash</string>
    <string name="autofocus_switch_title">Autofocus</string>
    <string name="output_image_format_switch_title">Output image format</string>
    <string name="capture_output_path_title">Output path</string>
    <string name="select_directory">Select</string>

    <string name="module_grant_phone_remotely_settings_password_title">Password</string>
</resources>
