<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log"
        android:orderInCategory="100"
        android:title="@string/action_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_tour"
        android:orderInCategory="100"
        android:title="@string/action_help_tour"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_how_to_control"
        android:orderInCategory="100"
        android:title="@string/action_help_how_to_control"
        app:showAsAction="never" />
</menu>
