<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.ModuleActivity"
    tools:showIn="@layout/activity_configure_control_module"
    android:id="@+id/relativeLayout_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_top"
                android:layout_marginBottom="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_module"
                    android:id="@+id/button_change_enabled"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/color_state_list_primary"
                    android:textColor="#fff"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/compatible"
                    android:id="@+id/textView_compatibility_info"
                    android:layout_alignParentTop="false"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/module_info_title"
                android:id="@+id/textView_module_info_title"
                style="@style/CardHeaderStyle"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:id="@+id/card_main_info"
                app:contentPadding="@dimen/card_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_description"
                        tools:text="description"
                        style="@style/CardContentTextStyle"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/commands_title"
                            android:id="@+id/textView_commands_title"
                            style="@style/HeaderPrimaryStyle"/>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageButton_command_info"
                            android:src="@drawable/ic_info_outline_grey_700_24dp"
                            android:background="@null"
                            android:layout_alignBottom="@+id/textView_commands_title"
                            android:layout_alignParentEnd="true"
                            android:layout_marginRight="-5dp"
                            android:layout_marginBottom="-5dp"
                            android:paddingRight="5dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="5dp"
                            android:paddingTop="5dp"
                            android:layout_alignParentRight="true"
                            tools:ignore="RtlHardcoded"/>
                    </RelativeLayout>

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView_commands"
                        style="@style/CodeBoxStyle"
                        android:divider="@null"/>

                    <TextView
                        android:text="@string/module_command_parameter_info_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_command_parameter_info_title"
                        android:layout_marginTop="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        style="@style/Header2PrimaryStyle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/textView_command_parameter_info"
                        tools:text="parameter info content"
                        style="@style/CardContentTextStyle"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_data_title"
                android:id="@+id/textView_user_settings_title"
                style="@style/CardHeaderStyle"
                android:visibility="gone"
                tools:visibility="visible"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/card_user_settings"
                app:contentPadding="@dimen/card_padding"
                android:visibility="gone"
                tools:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/granted_phones_title"
                        android:id="@+id/textView_granted_phones_title"
                        style="@style/HeaderPrimaryStyle"
                        android:layout_marginTop="0dp"/>

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView_granted_phones"
                        android:layout_below="@+id/textView_granted_phones_title"
                        android:dividerHeight="0dp"
                        android:divider="@null"
                        android:descendantFocusability="afterDescendants"/>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fab_add_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_white"
                        app:fabSize="mini"
                        android:layout_below="@+id/listView_granted_phones"
                        android:layout_margin="10dp"
                        app:backgroundTint="@color/colorAccentSecondary"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_module_section_settings"
                android:id="@+id/textView_module_settings_title"
                style="@style/CardHeaderStyle"
                tools:visibility="visible"
                android:visibility="gone"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:cardElevation="2dp"
                tools:layout_height="30dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/card_module_settings">

                <ViewStub
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewStub_settings_content"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
